--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "truffle-hdwallet-provider",
+  "name": "truffle-wallet-provider",
   "version": "0.0.3",
-  "description": "HD Wallet-enabled Web3 provider",
+  "description": "Wallet-enabled Web3 provider",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trufflesuite/truffle-hdwallet-provider.git"
+    "url": "git+https://github.com/crypedit/truffle-wallet-provider.git"
   },
   "keywords": [
     "etheruem",
-    "hd",
     "wallet",
-    "mnemonic",
     "provider"
   ],
-  "author": "Tim Coulter <tim.coulter@consensys.net>",
+  "author": "Fan Jiang <fan.torchz@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/trufflesuite/truffle-hdwallet-provider/issues"
+    "url": "https://github.com/crypedit/truffle-wallet-provider/issues"
   },
-  "homepage": "https://github.com/trufflesuite/truffle-hdwallet-provider#readme",
+  "homepage": "https://github.com/crypedit/truffle-wallet-provider#readme",
   "dependencies": {
-    "bip39": "^2.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "web3": "^0.18.2",
     "web3-provider-engine": "^8.4.0"
